# rust-learning-lab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
01-text-inspector/: Cargo.toml  README.md
01-text-inspector/apps/cli/: Cargo.toml
01-text-inspector/apps/cli/src/: main.rs
01-text-inspector/libs/core/src/models/: text.rs
01-text-inspector/libs/core/src/traits/: loader.rs  processor.rs
01-text-inspector/libs/infrastructure/: Cargo.toml
01-text-inspector/libs/infrastructure/src/loaders/: mod.rs  text_file_loader.rs
01-text-inspector/libs/infrastructure/tests/: text_file_loader_test.rs
01-text-inspector/libs/infrastructure/tests/testdata/: text_content.txt
01-text-inspector/libs/service/: Cargo.toml
01-text-inspector/libs/service/src/analyzer/: mod.rs  text_analyze_service.rs
01-text-inspector/libs/service/tests/: text_analyze_service_test.rs
02-threaded-analyzer/: Cargo.toml  README.md
02-threaded-analyzer/apps/CLI/: Cargo.toml
02-threaded-analyzer/apps/CLI/src/: main.rs
02-threaded-analyzer/libs/core/src/: lib.rs
02-threaded-analyzer/libs/core/tests/: task_test.rs
02-threaded-analyzer/libs/infrastructure/: Cargo.toml
02-threaded-analyzer/libs/infrastructure/src/: lib.rs
02-threaded-analyzer/libs/infrastructure/tests/: worker_thread_pool_test.rs
02-threaded-analyzer/libs/service/: Cargo.toml
02-threaded-analyzer/libs/service/src/: analyzer.rs
02-threaded-analyzer/libs/service/tests/: analyzer_service_test.rs
02-threaded-analyzer/libs/ta_core/: Cargo.toml
02-threaded-analyzer/libs/ta_core/tests/: task_test.rs
(+13 files in other folders)
