[package]
name = "CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
service = {path = "../../libs/service"}
ta_core = {path="../../libs/ta_core"}
infrastructure = {path = "../../libs/infrastructure"}

clap = { version = "4.5.45", features = ["derive"] }
num_cpus = "1.17.0"
num-bigint = "0.4"
num-traits = "0.2"